--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,6 @@
-openai==0.28
-streamlit
+chatterbot==1.0.5
+chatterbot-corpus==1.2.0
+spacy==2.3.5
+python-dateutil==2.8.2
+pytz==2023.3
+sqlalchemy==1.3.23
